fixing issue with navbar on mobile

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -848,6 +848,7 @@ tfoot {
 .navbar-brand {
     padding-top: 0px !important;
     padding-bottom: 0px !important;
+    margin-right: 10px;
 }
 
 /*.navbar-brand-mod {*/
